--- a/source/stylesheets/_portfolio.sass
+++ b/source/stylesheets/_portfolio.sass
@@ -4,6 +4,10 @@
   @media (max-width: $break-medium)
     padding-left: 0
 
+.portfolio-intro
+  @media (max-width: $break-medium)
+    +container
+
 .portfolio-section
   position: relative
 
